VideoDb: Allow filter by ids (API)
