# api/src/api/api.spec.yaml
@@ -409,6 +409,18 @@ paths:
               - HD
               - UHD
         - in: query
+          name: videoIds
+          required: false
+          description: A list of video IDs to filter by
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            minItems: 1
+            items:
+              type: integer
+              minimum: 1
+        - in: query
           name: flaggedOnly
           required: false
           description: filter priority-flagged videos only
